--- a/style.scss
+++ b/style.scss
@@ -5,7 +5,7 @@
 }
 
 body{
-    background-color: #ECF2F8;
+    background-color: hsl(210, 46%, 95%);
     padding: 2rem 5rem;
     width: 100vw;
     height: 100vh;
@@ -23,14 +23,18 @@ body{
     .card{
         width: 400px;
         height: 230px;
-        background-color: #19212E;
+        background-color: hsl(263, 55%, 52%);
+        background-color: hsl(217, 19%, 35%);
+        background-color: hsl(219, 29%, 14%);
+        background-color: hsl(0, 0%, 100%);
+        background-color: hsl(0, 0%, 81%);
         border-radius: 1.5rem;
 
         &.selected {
             width: 100%;
             height: 600px;
             border: none;
-            border-radius: 0;
+            border-radius: .5rem;
         }
     }
 }
