--- a/any-dashboard/style.css
+++ b/any-dashboard/style.css
@@ -21,7 +21,7 @@
   --more-list-shadow: rgba(209, 209, 209, 0.4);
   --button-bg: #1f1c24;
   --search-area-bg: #fff;
-  --star: #1ff1c2e;
+  --star: #ffd92c;
   --message-btn: #fff;
 }
 
@@ -44,6 +44,15 @@
   --more-list-bg-hover:  rgba(195, 207, 244, 0.1);
   --more-list-shadow: rgba(195, 207, 244, 0.1);
   --message-btn: rgba(195, 207, 244, 0.1);
+}
+
+::-webkit-scrollbar {
+  width: .5rem;
+}
+
+::-webkit-scrollbar-thumb {
+  background: var(--link-color-hover);
+  border-radius: 5rem;
 }
 
 html, body {
