--- a/style.scss
+++ b/style.scss
@@ -38,6 +38,11 @@ body{
             height: 600px;
             border: none;
             border-radius: .5rem;
+
+            color: hsl(0, 79%, 53%);
+            font-size: 1.5rem;
+            flex-direction: column;
+            
         }
 
         span {
